kube/manifests/todo/3_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  namespace: todo
  labels:
    app: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: inherently/usrvtodo:0.7
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /data
              name: todo-data
      securityContext:
        runAsUser: 5000
        runAsGroup: 5000
        fsGroup: 5000
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: todo-data
          persistentVolumeClaim:
            claimName: todo-data-pvc
            #claimName: todo-local-data-pvc
