kube/manifests/todo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  labels:
    app: todo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: inherently/usrvtodo:0.7
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/data"
          name: todo-data
      volumes:
        - name: todo-data
          persistentVolumeClaim:
            claimName: todo-data-pvc
