kube/manifests/todo/4_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
  namespace: todo
spec:
  selector:
    app: todo
  ports:
    - protocol: TCP
      name: web
      port: 8080
