kube/manifests/todo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  selector:
    app: todo
  ports:
    - protocol: TCP
      name: web
      port: 8080
