kube/manifests/todo/5_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
  namespace: todo
spec:
  ingressClassName: nginx
  rules:
  - host: todo.home.inherently.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port:
              number: 8080
