kube/manifests/todo/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo
  namespace: todo
spec:
  rules:
  - host: todo.kates.test
    http:
      paths:
      - path: /
        backend:
          serviceName: todo-svc
          servicePort: 8080
